fixed overlapping isssue on search page

--- a/src/pages/Search/index.css
+++ b/src/pages/Search/index.css
@@ -8,6 +8,7 @@
   justify-content: center;
   align-items: center;
   gap: 20px;
+  position: relative;
 
   z-index: 100;
 }
@@ -391,7 +392,7 @@
   position: sticky;
   margin-top: 10px;
   top: 0;
-  z-index: 999;
+  z-index: 99;
   background-color: var(--bg);
 }
 .search_page .search_results h2 {
